package com.restaurante.dcarrasco.modelo;

public enum EstadoPedido {
    SIN_ENTREGAR,
    PENDIENTE_COBRAR
}
