package com.restaurante.dcarrasco.modelo;

public class OpcionPedido {

}
