@startuml "Diagrama de Clase"

class Mesa{
    - String numero
    + Integer calcularTotal()
    + Integer pagar(Integer efectivo)
}

class Pedido{
    - String cliente
    + Integer calcularValor()
}

enum EstadoPedido{
    + PENDIENTE_ENTREGAR
    + PENDIENTE_COBRAR
}

abstract OpcionPedido {
    - Integer precio
}

class Adicional{
    - String nombre
    - Integer precio
}

class Completo{

}

class Bandeja{

}


class Sopa{
    - String nombre
}

class Principio{
    - String nombre
}

class Carne {
    - String nombre
}

class Ensalada {
    - String nombre
}

class Jugo {
    - String nombre
}

Mesa "1" -- "1..*" Pedido
Pedido .left.> EstadoPedido
Pedido "1" o-- "1" OpcionPedido
Pedido "*" o-right- "*" Adicional
Completo "*" *-- "1" Sopa
OpcionPedido <|-left- Bandeja
OpcionPedido <|-left- Completo
OpcionPedido "*" *-- "1" Principio
OpcionPedido "*" *-- "1" Carne
OpcionPedido "*" *-- "1..0" Ensalada
OpcionPedido "*" *-- "1" Jugo

@enduml